Revision history for autodie

{{$NEXT}}

2.13_02   2013-02-21 22:33:55 Australia/Melbourne

        * TEST: chown() tests are skipped on Win32, as chown on Windows
          platforms seems to always say it was successful. (Help in
          testing this would be appreciated.)

2.13_01   2013-02-20 03:10:46 Australia/Melbourne

        * BUGFIX: Fixed bug whereby chmod, chown, kill, unlink and
          utime could not throw an exception, even when they didn't
          change all their files, or killed all their processes.

        * BUGFIX: Added support for 'chown', that was previously
          overlooked. Mad props to RsrchBoy for spotting this.
          (GH Pull #13)

        * BUGFIX: Removed executable bits from some bundled text files.

        * BUILD: We now use dzil to manage autodie.

        * BUILD: Only Perl 5.8.4 and above is supported by autodie.
          Please upgrade your Perl distro if you're using 5.8.3 or
          below.

        * TEST: Author tests now look for the AUTHOR_TESTING env
          variable (for dzil compliance).

        * TEST: Better testing for chown, chmod, and unlink.

2.13  Thu Nov  8 14:22:03 EST 2012
        * TEST: Deterministic tests in hints_pod_examples.t .
          (RT #80412, thanks to demerphq)

        * INTERNAL: subroutine installs are now done in a
          deterministic order. (RT #80414, thanks to demerphq)

2.12  Tue Jun 26 14:55:04 PDT 2012
        * BUGFIX: autodie now plays nicely with the 'open' pragma
        (RT #54777, thanks to Schwern).

        * BUILD: Updated to Module::Install 1.06

        * BUILD: Makefile.PL is less redundant.

        * TEST: t/pod-coverage.t no longer thinks LEXICAL_TAG is
          a user-visible subroutine.

2.11  Sat Mar 24 01:50:56 AUSEST 2012
        * DOCS: Explicitly documented that autodie is context
          unaware.  (Thanks to chromatic.)

        * TEST: Multi-arg open tests are skipped on VMS.
          (Thanks to Craig A. Berry.)
