@@ -682,6 +682,12 @@ sub _init {
         next if $package->isa('Fatal');
         next if $package->isa($class);
         next if $package->isa(__PACKAGE__);
+
+        # Anything with the 'autodie::skip' role wants us to skip it.
+        # https://github.com/pfenwick/autodie/issues/15
+
+        next if $package->DOES('autodie::skip');
+
         next if $file =~ /^\(eval\s\d+\)$/;
 
         last;
